finished the reproduction analysis: it was different SCZ GWAS gene sets

--- a/notebook/2021-06-25-reproduce/2021-06-25-reproduce.ipynb
+++ b/notebook/2021-06-25-reproduce/2021-06-25-reproduce.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "alpine-concentration",
+   "id": "extraordinary-barcelona",
    "metadata": {},
    "source": [
     "Checking some basic routines for Eduardo"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "quantitative-bowling",
+   "id": "negative-content",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "welsh-calculator",
+   "id": "ranking-malpractice",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,17 +52,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "adjusted-winter",
+   "cell_type": "markdown",
+   "id": "fitted-modeling",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Export SCZ GWAS geneset"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "improving-pasta",
+   "id": "forward-reproduction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "missing-tournament",
+   "id": "italian-afghanistan",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "personalized-intention",
+   "id": "furnished-serve",
    "metadata": {},
    "outputs": [
     {
@@ -177,9 +177,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "emerging-migration",
+   "metadata": {},
+   "source": [
+    "Export results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "canadian-tiffany",
+   "id": "compound-rubber",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "direct-astrology",
+   "id": "common-sensitivity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "convinced-figure",
+   "id": "popular-ethiopia",
    "metadata": {},
    "outputs": [],
    "source": []
