batches save figs

--- a/notebook/2022-04-06-sample-properties/2022-04-06-sample-properties.ipynb
+++ b/notebook/2022-04-06-sample-properties/2022-04-06-sample-properties.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d1c082b",
+   "id": "45a50455",
    "metadata": {},
    "source": [
     "The code below performs the following operations:\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9e5efa1b",
+   "id": "685d2fc6",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8634bba8",
+   "id": "98b874a2",
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +701,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "dc4bf1f4",
+   "id": "2a4b7a17",
    "metadata": {},
    "outputs": [
     {
@@ -1131,13 +1131,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "366f0df2",
+   "id": "53f4bfd6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f6c0f20c130>"
+       "<matplotlib.legend.Legend at 0x7faa211151f0>"
       ]
      },
      "execution_count": 6,
@@ -1173,7 +1173,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d95c413e",
+   "id": "6ffc2b57",
    "metadata": {},
    "outputs": [
     {
@@ -1248,18 +1248,19 @@
    "source": [
     "def crosstab_plot(othervar='Sequencing'):\n",
     "    fig, ax = plt.subplots()\n",
-    "    ct = pd.crosstab(subjects[othervar], subjects.Dx)\n",
+    "    ct = pd.crosstab(subjects[othervar], subjects.Dx)#.transpose()\n",
     "    ct.plot.barh(stacked=True, ax=ax)\n",
     "    return((ct, fig, ax))\n",
     "\n",
     "ct, fig, ax = crosstab_plot(othervar='Sequencing')\n",
+    "attila_utils.savefig(fig, 'Dx-distro-sequencing-batches')\n",
     "ct"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "920686f5",
+   "id": "392cd581",
    "metadata": {},
    "outputs": [
     {
@@ -1333,6 +1334,7 @@
    ],
    "source": [
     "ct, fig, ax = crosstab_plot(othervar='Institution')\n",
+    "attila_utils.savefig(fig, 'Dx-distro-institution-batches')\n",
     "ct"
    ]
   },
