--- a/notebook/2022-04-06-sample-properties/2022-04-06-sample-properties.ipynb
+++ b/notebook/2022-04-06-sample-properties/2022-04-06-sample-properties.ipynb
@@ -1125,6 +1125,7 @@
     "subjects = pd.merge(left=subjects, right=samples_genewiz[['Sequencing']], how='left', on='Individual ID')\n",
     "subjects['Sequencing'] = subjects['Sequencing'].fillna('other')\n",
     "subjects['Sequencing'] = pd.Categorical(subjects['Sequencing'], ordered=True)\n",
+    "subjects.to_csv('../../results/2022-04-06-sample-properties/subjects-sequencing-ancestry.csv')\n",
     "subjects"
    ]
   },
@@ -1137,7 +1138,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7faa211151f0>"
+       "<matplotlib.legend.Legend at 0x7f96786f3e50>"
       ]
      },
      "execution_count": 6,
@@ -1349,13 +1350,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 56181,\n",
-      "  \"iopub_port\": 41405,\n",
-      "  \"stdin_port\": 46639,\n",
-      "  \"control_port\": 36115,\n",
-      "  \"hb_port\": 38181,\n",
+      "  \"shell_port\": 39215,\n",
+      "  \"iopub_port\": 60777,\n",
+      "  \"stdin_port\": 56387,\n",
+      "  \"control_port\": 58967,\n",
+      "  \"hb_port\": 42803,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"c9d366f0-476195e862826d1f144b61d7\",\n",
+      "  \"key\": \"b2b4ad92-2222d82ec41318ae86754773\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -1364,7 +1365,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-4ba6ed2b-805a-49b9-a16e-462bef54ccdd.json\n",
+      "    $> jupyter <app> --existing kernel-00467849-035d-4979-affa-898c4e199b0d.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
